style.css
body {
    font-family: Roboto, sans-serif;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    /* removed wrap and now nav bar overflows when i shrink the window. Figure out how to fix this 
    without hiding overflow in .nav*/
    padding:0;
    margin:0;
    gap: 40px;
    box-sizing: border-box;
}
body > div{
    padding: 0 10%;
    
}

/* ------------Header Nav Section-------------------- */
.header{
    background-color: #1F2937;
    /* consider adding this to all direct div childs of body */
    min-width: min-content; 
}

.header .nav{
    display: flex;
    justify-content: space-between;
    margin: 10px 0;
    gap: 20px;
    
}

.header .header-links {
    display: flex;
    margin:0;
    padding:0;
    gap: 10px;
    list-style: none;
    flex-wrap: nowrap;
    min-width: max-content;
}


.header .header-links li{
   
}
.header-links a{
    text-decoration: none;
    font-size: 18px; 
    color: #E5E7EB;
}

.header .logo{
    font-size: 24px;
    color: #F9FAF8;
    font-weight: bold;
    min-width: max-content;
}

/* ----------------Header Main Section----------------------- */

.header .main{
    display: flex;
    justify-content: space-around;
    margin: 5% 0;
    flex-wrap: wrap-reverse;
    gap:10px;
}
.header .main .left{
    display: flex;
    justify-content: flex-start;
    flex-basis: 40%;
    flex-grow:1;
     /* How can I make it so when my flex items wrap (the text), there are no whitespaces around the text.
       I still want my text-aligned to center, while the group of text is pushed all the way to the left  */
}

.header .main .flex-column{
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    gap: 5px;
}
.header .main .right{
    display: flex;
    flex-basis: 55%;

    justify-content: flex-end;
}


.header img{
    flex-grow: 0;
    flex-shrink: 0;
    min-width: 500px;
    flex-basis: 500px;
    height: 200px;
}

.header .hero-main-text{
    font-size: 48px;
    font-weight: 900;
    color: #F9FAF8;
}

.header .secondary-text {
    font-size: 18px; 
    color: #E5E7EB;
}



button{
    background-color: #3882F6;
    color: white;
    border: none;
    border-radius: 4px;
    padding: 5px 10px;
    font-size: 16px;
}


/* ------------Body Info Section-------------------- */
.body-info .info-header{
    text-align: center;
    font-size: 36px;
    font-weight: 900;
    color:#1F2937;
}

.body-info .media-object{
    display: flex;
    gap: 100px;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    padding: 5% 0;
}
.body-info img{
    width: 150px;
    height: 150px;
    border-color: #3882F6;
    border-radius: 6px;
    border-width: 3px;
    border-style: solid;
}

.body-info .card{
    flex-basis: 150px;
    text-align: center;
    font-size: 16px;
    color: #1F2937;
}
/* ------------Body Testimonial Section-------------------- */
.body-testimonial{
    background-color: #E5E7EB;
}

.body-testimonial .flex-container{
    display: flex;
    flex-flow: column;
    background-color: #E5E7EB;
    padding: 100px;
}

.body-testimonial .quote{
    font-size: 36px;
    font-weight: light;
    font-style: italic;
    color: #1F2937;
    align-self: center;
}
.body-testimonial .author{
    font-size: 18px;
    font-weight: bold;
    color: #1F2937;
    align-self: flex-end;
}
/* ------------Body Enlist Section-------------------- */
.body-enlist .container{
    background-color: #3882F6;
    padding: 5% 10%;
    /* why does padding break out of enlist container when I change it to a percentage? */
    border-radius: 6px;
}

.body-enlist .call-to-action{
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap:10px;
    /* min-width: max-content; uncomment if you don't want flex container to shrink when it runs out of space */
    flex-wrap: wrap;
    /* maybe apply same structure from heading wrap to this flex container, so when the sign up button
    wraps, everything is center aligned */
}

.call-to-action .text{
    font-size: 18px;
    color: white;
}

.call-to-action .title{
 font-weight: bold;
}

.call-to-action button{
    border: 2px solid white;
    flex-shrink: 0;
    flex-basis: 100px;
    min-width: 100px;
}
/* ------------Footer Section-------------------- */
.footer{
    background-color: #1F2937;
}

.footer .copyright-text{
    font-size: 14px; 
    color: #E5E7EB;
    padding: 25px;
    text-align: center;
}

